--- a/index.html
+++ b/index.html
@@ -16,11 +16,22 @@
                 <a href="https://www.youtube.com/watch?v=NsMKvVdEPkw" alt="Meow">Cat</a>
             </li>
             <li onmouseover="showMenu(this)" onmouseout="hideMenu(this)">
+                <a href="https://www.nationalgeographic.com/animals/mammals/facts/domestic-cat" alt="Meow">Dog?</a>
+            </li>
+            <li onmouseover="showMenu(this)" onmouseout="hideMenu(this)">
                 <a href="#">More</a>
                 <ul class="submenu">
                     <li><a href="https://github.com/bsupnet/bsupnet.github.io">Projects</a></li>
                     <li><a href="mailto:bsupnet@torontomu.ca">Contact</a></li>
                     <li><a href="https://www.youtube.com/@ZapCubRBLX">My Content</a></li>
+                </ul>
+            </li>
+            <li onmouseover="showMenu(this)" onmouseout="hideMenu(this)">
+                <a href="#">Even MORE</a>
+                <ul class="submenu">
+                    <li><a href="https://en.wikipedia.org/wiki/Bouldering">My Favourite Sport</a></li>
+                    <li><a href="https://www.healthline.com/nutrition/high-protein-foods">My Most Visited Site</a></li>
+                    <li><a href="https://open.spotify.com/track/42VsgItocQwOQC3XWZ8JNA?si=8f835e21bb3e4403">My Favourite Song</a></li>
                 </ul>
         </ul>
     </nav>
